# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: superlinter.yml
brain_games/: cli.py  engine.py
brain_games/games/: __init__.py  brain_calc.py  brain_calc_game.py  brain_even.py  brain_even_game.py  brain_gcd.py  brain_gcd_game.py  brain_prime.py  brain_prime_game.py  brain_progression.py  brain_progression_game.py  calc.py  cli.py  constants.py  engine.py  even.py  gcd.py  prime.py  progression.py  w.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_game.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
