[tool.poetry]
name = "hexlet-code"
version = "0.1.3"
description = ""
authors = ["Albert Gevorkyan <agevork@yandex.ru>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
wemake-python-styleguide = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_game:main"
brain-even1 = "brain_games.scripts.brain_even:main"
brain-calc1 = "brain_games.scripts.brain_calc:main"
brain-gcd1 = "brain_games.scripts.brain_gcd:main"
brain-prime1 = "brain_games.scripts.brain_prime:main"
brain-progression1 = "brain_games.scripts.brain_progression:main"

